# NovaFit

./: .env  README.md
.github/workflows/: deploy.yml
novafit/: .env  pyproject.toml
novafit/.github/workflows/: deploy.yml
novafit/config/: asgi.py  settings.py  urls.py
novafit/novafit/: admin.py  apps.py  filters.py  pagination.py  permissions.py  urls.py
novafit/novafit/migrations/: 0001_initial.py
novafit/novafit/models/: __init__.py  asistencia.py  clase.py  entrenador.py  membresia.py  miembro.py  pago.py
novafit/novafit/serializers/: __init__.py  asistencia_serializer.py  clase_serializer.py  entrenador_serializer.py  membresia_serializer.py  miembro_serializer.py  pago_serializer.py
novafit/novafit/tests/: helpers.py  test_asistencia.py  test_attendance.py  test_autenticacion.py  test_auth.py  test_clases.py  test_classes.py  test_entrenadores.py  test_members.py  test_memberships.py  test_membresias.py  test_miembros.py  test_pagos.py  test_payments.py  test_trainers.py
novafit/novafit/views/: __init__.py  asistencia_views.py  clase_views.py  entrenador_views.py  membresia_views.py  miembro_views.py  pago_views.py
