[project]
name = "novafit"
version = "0.1.0"
description = "API REST para la gestión del gimnasio NovaFit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.0.0",
    "pillow>=11.0.0",
    "gunicorn>=26.0.0",
]
